- Console agent enhanced - Different colors for different states added - Employee count added - Design improved

--- a/dispatcher/res/plan.css
+++ b/dispatcher/res/plan.css
@@ -1,4 +1,5 @@
 @import "jquery.svg.css";
-.sensor_green {fill:#00ff00;}
-.sensor_red {fill:#ff0000;}
-.sensor_flashing {fill:#ff0000;}
+.sensor_green{fill:#54f167;}
+.sensor_gray {fill:#babdb6;}
+.sensor_yellow {fill:#edd400;}
+.sensor_red {fill:#cc0000;}
