--- a/dispatcher/res/css/ius.css
+++ b/dispatcher/res/css/ius.css
@@ -1,15 +1,11 @@
-body {
-    padding-top: 20px;
-    padding-bottom: 60px;
+/* body { */
+/*     padding-top: 20px; */
+/*     padding-bottom: 60px; */
+/* } */
+footer {
+    text-align:center;
 }
 
-/* Custom container */
-.container {
-    margin: 0 auto;
-    max-width: 1000px;
-}
-
-/* Main marketing message and sign up button */
 .jumbotron {
     margin: 30px 0;
     text-align: center;
@@ -18,23 +14,10 @@ body {
     font-size: 20px;
     line-height: 1;
 }
-.jumbotron .lead {
-    font-size: 24px;
-    line-height: 1.25;
-}
 .jumbotron .btn {
     font-size: 21px;
     padding: 14px 24px;
 }
-
-/* Supporting marketing content */
-.marketing {
-    margin: 60px 0;
-}
-.marketing p + h4 {
-    margin-top: 28px;
-}
-
 
 /* Customize the navbar links to be fill the entire space of the .navbar */
 .navbar .navbar-inner {
@@ -96,4 +79,28 @@ dl ul {
 }
 dl li:before {
     content: " – "
+}
+ul.custom-list li:before {
+    content:none;
+}
+ul.custom-list li i {
+    margin-right:3px;
+}
+.service-order-list {
+    counter-reset:my-counter;
+    list-style:none;
+}
+.service-order-list li {
+    position: relative;
+    font: 16px;
+    padding: 4px 0 10px 0;
+}
+.service-order-list li:before {
+    color:pink;
+    content: counter(my-counter);
+    counter-increment: my-counter;
+    position: absolute;
+    left: 0;
+    top: 0;
+    font: bold 50px/1 Sans-Serif;
 }
