--- a/dispatcher/res/css/ius.css
+++ b/dispatcher/res/css/ius.css
@@ -107,3 +107,22 @@ ul.custom-list li i {
 .dashed {
     border-bottom:1px dashed;
 }
+.underlined {
+    border-bottom:1px solid;
+}
+.external { background:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAVklEQVR4Xn3PgQkAMQhDUXfqTu7kTtkpd5RA8AInfArtQ2iRXFWT2QedAfttj2FsPIOE1eCOlEuoWWjgzYaB/IkeGOrxXhqB+uA9Bfcm0lAZuh+YIeAD+cAqSz4kCMUAAAAASUVORK5CYII=") no-repeat scroll right center transparent;
+    padding-right: 13px;
+    color: rgb(51, 102, 187);
+}
+#monitor-object {
+    margin: 20px auto 0 auto;
+    width:900px;
+    position:relative;
+}
+#monitor-object iframe {
+    style=z-index:2;
+    position:relative;
+    top:-810px;
+    left:-100px;
+    transform: scale(0.7);
+}
