--- a/dispatcher/res/css/ius.css
+++ b/dispatcher/res/css/ius.css
@@ -122,7 +122,20 @@ ul.custom-list li i {
 #monitor-object iframe {
     style=z-index:2;
     position:relative;
-    top:-654px;
-    left:-96px;
+    top:-752px;
+    left:-109px;
     transform: scale(0.7);
+    width:1016px;
+    height:670px;
+}
+#svg {
+    display:block;
+    width: 1000px;
+    margin:20px auto 0 auto;
+}
+ul.accordion-inner {
+    list-style:none;
+}
+ul.accordion-inner li:before {
+    content: " – "
 }
