--- a/dispatcher/res/css/control.css
+++ b/dispatcher/res/css/control.css
@@ -1,57 +1,44 @@
-.total {
-    width:100%;
-    font-weight: bold;
-    border-top: 1px solid;
-    padding-top:0px;
+h2 {
+    margin: 0px 0 -10px 44px;
+    font-size:28px;
 }
-.total td {
-    padding-top: 10px;
-}
-.total-vertical {
-    border-left: 1px solid;
-}
-
-.nav-tabs {
-    margin-left: 40px;
-    font-size: 18px;
-}
-h1 {
-    width:700px;
-    margin:15px auto 40px auto;
-}
-
 h3 {
     font-size: 16px;
     line-height:20px;
 }
-.pane {
-    margin-top:20px;
-    padding: 5px 5px 10px 5px;
-    border-radius:7px;
+
+object {
+    margin:20px 0 0 0px;
+    height:700px;
+}
+.control-link {
+    line-height: 30px;
 }
 ul.custom-list {
     margin: 0;
     list-style:none;
 }
-ul.custom-list a {
+.control-link a {
     color:black;
     text-decoration: underline;
 }
+.custom-list li i, .custom-list li img {
+    margin-right:10px;
+}
+.pane {
+    margin-top:20px;
+    padding: 5px 15px 10px 5px;
+    border-radius:7px;
+}
 .selector li {
     background:#f7f7f7;
-    color:black;
     padding: 4px 5px 4px 5px;
-    font-size: 14px;
-    line-height:20px;
     margin-top: 2px;
     border: solid #d7d7d7 1px;
     border-radius: 7px;
 }
 .selector li a {
     display:block;
-}
-.custom-list li i, .custom-list li img {
-    margin-right:10px;
 }
 .selector li.active {
     background: #696969;
@@ -64,37 +51,35 @@ ul.custom-list a {
 .selector:nth-child(1) {
     margin-top: 0px;
 }
-object {
-    position:relative;
-    top: -20px;
-    left:-20px;
-    margin-left: 20px;
-}
-.control-link {
-    line-height: 30px;
-}
 .stateboard, .object-switcher, .actions {
     background-color: #eeeeee;
     border: 1px #d7d7d7 solid;
 }
-.td-icon {
+.tbl-category-global td {
+    padding: 5px 0;
+    border-bottom:1px #dddddd solid;
+    border-top:1px #dddddd solid;
+ }
+td.td-icon {
     width: 30px;
 }
-.td-large-icon {
-    width: 80px;
-}
-.td-count {
+td.td-count {
     text-align:right;
+    vertical-align:bottom;
     padding-right:10px;
 }
-
-.user-count td {
-    height: 40px;
-    text-align:center;
-}
-.room-count td {
-    font-size: 40px;
+.tbl-total-global td {
+    width:100%;
+    font-weight: bold;
+    border-top: 1px solid;
     padding-top: 10px;
+}
+.hint {
+    background-color:#eeeeee;
+    width: 300px;
+    position:fixed;
+    right:60px;
+    border: solid #bbbbbb 1px;
 }
 .hint-header {
     background-color:#696969;
@@ -106,31 +91,55 @@ object {
     font-size:16px;
     font-weight:bold;
 }
-.hint {
-    background-color:#fefefe;
-    border: solid #bbbbbb 1px;
-    padding:0;
+.hint-header, .hint {
     border-top-left-radius:4px;
     border-top-right-radius:4px;
-    width: 250px;
-    position:fixed;
-    right:60px;
 
 }
 .hint-inner {
-    padding-bottom: 10px;
+    padding: 10px;
+}
+.tbl-category-room {
+    margin-left:-10px;
+    margin-bottom:10px;
+    float:left;
+    width:75%;
+}
+.tbl-total-room {
+    float:right;
+    width:25%;
+}
+.tbl-category-room td, .tbl-total-room td {
+    border-right:1px solid #cccccc;
+    padding-left: 10px;
+    font-size: 32px;
+    padding: 10px 0 5px 0;
+    text-align:center;
+}
+.tbl-category-room td + td + td {
+    border-right:none;
+}
+.tbl-total-room td {
+    border-left:1px solid black;
+    border-right:none;
+    font-weight:bold;
+}
+td.td-large-icon {
+    width: 80px;
+}
+.tbl-category-room td.td-total-room {
+    border-left: 1px solid red;
+    border-right:1px solid red;
 }
 .hint-inner p {
-    margin: 5px 10px 10px 10px;
+    margin: 0px 10px 10px 0px;
 }
 .hint1 {
-    top:180px;
+    top:150px;
 }
-h2 {
-    margin-left: 40px;
-}
+
 .hint2 {
-    top:380px;
+    top:340px;
 }
 i.icon-remove {
     float:right;
